suricatta: added option to bind to interface/IP address.
This patch adds the -f cmdline arg and the "interface" parameter to suricatta
to optionally bind communication channel to a specific interface or IP address.
To do so, a new config option is added to curl channel interface, which then
exploits CURLOPT_INTERFACE option.
Binding to an interface is useful in multi-interface devices, where routing
can be policy-based (e.g with output traffic classification rules based on
src address/device).

Signed-off-by: Luca Pesce <luca.pesce@vimar.com>
Signed-off-by: Pedro Aguilar <pedro.aguilar@vimar.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -127,6 +127,9 @@ identify : (
 # ciphers		: string in the format used by CURL to set the allowed ciphers suite
 #			  This allows to disable some ciphers, for example
 #			  ciphers = "!eNULL:!aNULL:!EXP:!LOW:!MEDIUM:!ADH:!AECDH:!IDEA:!SEED:!MD5:!SHA:!RC4:HIGH+EECDH:HIGH+EDH";
+# interface		: string
+#			  interface name (e.g. "eth0") or IP address to bind communication channel to.
+#			  This allows to select source interface/address for outgoing traffic, if needed.
 
 suricatta :
 {
